Renamed and moved some stuff.

--- a/Exercises/Exercises.vcxproj
+++ b/Exercises/Exercises.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{ad842a42-a570-40bc-8c72-fd8c83d02f86}</ProjectGuid>
-    <RootNamespace>Exercices</RootNamespace>
+    <RootNamespace>Exercises</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
