--- a/Exercises/CMakeLists.txt
+++ b/Exercises/CMakeLists.txt
@@ -3,6 +3,7 @@ set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake")
 
 project(Exercices)
 
+# On met les fichiers sources (incluant les entêtes)
 set(ALL_FILES
     "main.cpp"
     "Arguments.hpp"
@@ -10,8 +11,10 @@ set(ALL_FILES
 )
 add_executable(${PROJECT_NAME} ${ALL_FILES})
 
+# Les flags de compilation. Ceux-ci reproduisent à peu près le comportement de MSVC avec W4.
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a -fsigned-char -Wall -Wextra -Wpedantic -Woverloaded-virtual -Wno-unknown-pragmas -Wno-enum-compare")
 
+# Tous les package Vcpkg. Pour savoir quoi mettre, on fait "vcpkg install <le package>", puis on met ce qu'ils disent de mettre dans le CMakeLists.
 find_package(Boost REQUIRED COMPONENTS regex)
 find_package(cppitertools CONFIG REQUIRED)
 find_path(TCLAP_INCLUDE_DIRS "tclap/Arg.h")
