Added Tutorial on how to work with Vcpkg on Windows/Linux/Mac.

--- a/Exercises/CMakeLists.txt
+++ b/Exercises/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.0.0)
+# La raison pour laquelle on fait une variable d'environnement VCPKG_ROOT.
 set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake")
 
+# Le nom du projet.
 project(Exercices)
 
 # On met les fichiers sources (incluant les entêtes)
@@ -11,7 +13,7 @@ set(ALL_FILES
 )
 add_executable(${PROJECT_NAME} ${ALL_FILES})
 
-# Les flags de compilation. Ceux-ci reproduisent à peu près le comportement de MSVC avec W4.
+# Les flags de compilation. Ceux-ci reproduisent un peu le comportement de MSVC avec /W4.
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a -fsigned-char -Wall -Wextra -Wpedantic -Woverloaded-virtual -Wno-unknown-pragmas -Wno-enum-compare")
 
 # Tous les package Vcpkg. Pour savoir quoi mettre, on fait "vcpkg install <le package>", puis on met ce qu'ils disent de mettre dans le CMakeLists.
