Moved actual documentation to doc/ and added a summary to Readme.

--- a/Exercises/Exercises.vcxproj
+++ b/Exercises/Exercises.vcxproj
@@ -157,6 +157,8 @@
     <Text Include="CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\doc\Classroom.md" />
+    <None Include="..\doc\Vcpkg.md" />
     <None Include="..\README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
