--- a/src/Exercises.vcxproj
+++ b/src/Exercises.vcxproj
@@ -147,13 +147,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Arguments.cpp" />
+    <ClCompile Include="LevelManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="TileMap.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Arguments.hpp" />
+    <ClInclude Include="Direction.h" />
+    <ClInclude Include="Exceptions.h" />
+    <ClInclude Include="LevelManager.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="TileMap.h" />
   </ItemGroup>
