ADD : Uncommented revised version
Tightened up on a few things.

--- a/src/Exercises.vcxproj
+++ b/src/Exercises.vcxproj
@@ -147,9 +147,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Constants.cpp" />
     <ClCompile Include="Direction.cpp" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="LevelManager.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Tile.cpp" />
@@ -159,8 +160,9 @@
     <ClInclude Include="Direction.h" />
     <ClInclude Include="Exceptions.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Constants.h" />
+    <ClInclude Include="Item.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="LevelManager.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="TileMap.h" />
   </ItemGroup>
