FIX : cmakelist configuration

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,8 +8,23 @@ project(Exercices)
 # On met les fichiers sources (incluant les entêtes)
 set(ALL_FILES
     "main.cpp"
-    "Arguments.hpp"
-    "Arguments.cpp"
+		"Constants.cpp"
+		"Constants.h"
+		"Direction.cpp"
+		"Direction.h"
+		"Exceptions.h"
+		"Game.cpp"
+		"Game.h"
+		"Item.cpp"
+		"Item.h"
+		"Player.cpp"
+		"Player.h"
+		"Tile.cpp"
+		"Tile.h"
+		"TileMap.cpp"
+		"TileMap.h"
+		
+
 )
 add_executable(${PROJECT_NAME} ${ALL_FILES})
 
@@ -17,7 +32,7 @@ add_executable(${PROJECT_NAME} ${ALL_FILES})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a -fsigned-char -Wall -Wextra -Wpedantic -Woverloaded-virtual -Wno-unknown-pragmas -Wno-enum-compare")
 
 # Tous les package Vcpkg. Pour savoir quoi mettre, on fait "vcpkg install <le package>", puis on met ce qu'ils disent de mettre dans le CMakeLists.
-find_package(Boost REQUIRED COMPONENTS regex)
+find_package(Boost REQUIRED COMPONENTS regex functional)
 find_package(cppitertools CONFIG REQUIRED)
 find_path(TCLAP_INCLUDE_DIRS "tclap/Arg.h")
 target_include_directories(${PROJECT_NAME} PRIVATE ${TCLAP_INCLUDE_DIRS})
