--- a/src/Exercises.vcxproj
+++ b/src/Exercises.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="TileMap.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Actions.h" />
     <ClInclude Include="Direction.h" />
     <ClInclude Include="Exceptions.h" />
     <ClInclude Include="Game.h" />
